SCRUM-32 auth-guards-implement

--- a/src/app/employee-view/menu-employee/menu-employee.component.html
+++ b/src/app/employee-view/menu-employee/menu-employee.component.html
@@ -10,6 +10,7 @@
   @if(isDropdownOpenxs){
     <div class="flex flex-col">
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/employee/order-list-employee']" >LISTA DE ORDENES</button>
+      <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" (click)="closeSesion()" >SALIR</button>
     </div>
   }
 
