--- a/src/app/mechanic-view/menu-mechanic/menu-mechanic.component.html
+++ b/src/app/mechanic-view/menu-mechanic/menu-mechanic.component.html
@@ -14,7 +14,7 @@
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/workshop-info']" >INFORMACIÓN</button>
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/workshop-services']">SERVICIOS</button>
       <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/workshop/workshop-mechanics']">MECANICOS</button>
-
+      <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" (click)="closeSesion()">SALIR</button>
     </div>
   }
 
