--- a/src/app/client-view/menu-client/menu-client.component.html
+++ b/src/app/client-view/menu-client/menu-client.component.html
@@ -12,7 +12,7 @@
     <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/client/order-list-client']" >LISTA DE ORDENES</button>
     <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/client/edit-info']" >INFORMACIÓN</button>
     <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" [routerLink]="['/client/register-vehicles']">VEHICULOS</button>
-
+    <button class="border-2 font-bold px-8 py-2 rounded-lg mt-3 hover:bg-red-500 hover:text-white" (click)="closeSesion()">SALIR</button>
   </div>
   }
 
