--- a/src/app/order-progress/pages/client-progress/client-progress.component.html
+++ b/src/app/order-progress/pages/client-progress/client-progress.component.html
@@ -26,8 +26,10 @@
       </div>
       <div class="p-4 flex items-center justify-between" style="background: #D9D9D9;" *ngFor="let servicio of orders.operationDetails">
         <p>{{ servicio.operation.name }}</p>
-        <button (click)="openChat()">
-          <img src="./assets/img/iconoChat.png" alt="Logo" class="h-6 mr-1" style="cursor: pointer;">
+        <button>
+          <a [href]="'https://wa.me/51' + orders.phoneWorkShop" target="_blank">
+            <img src="./assets/img/iconoChat.png" alt="Logo" class="h-6 mr-1" style="cursor: pointer;">
+          </a>
         </button>
       </div>
     </div>
