--- a/src/app/order-progress/pages/employee-progress/employee-progress.component.html
+++ b/src/app/order-progress/pages/employee-progress/employee-progress.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="p-4 flex items-center justify-between" style="background: #D9D9D9;">
         <p>{{ datosOrden.operation.name }}</p>
-        <button (click)="openChat()">
+        <button>
           <a [href]="'https://wa.me/51' + datosOrden.phoneMechanic" target="_blank">
             <img src="./assets/img/iconoChat.png" alt="Logo" class="h-6 mr-1" style="cursor: pointer;">
           </a>
